--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ cachetools==6.1.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
-docx==0.2.4
 gitdb==4.0.12
 GitPython==3.1.45
 h11==0.16.0
@@ -37,6 +36,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
+python-docx==1.2.0
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
