--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
@@ -48,12 +49,15 @@ regex==2025.7.34
 requests==2.32.4
 requests-toolbelt==1.0.0
 rpds-py==0.27.0
+scikit-learn==1.7.1
+scipy==1.16.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 streamlit==1.48.1
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.11.0
 toml==0.10.2
 tornado==6.5.2
