--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ coloredlogs==15.0.1
 dataclasses-json==0.6.7
 distro==1.9.0
 durationpy==0.10
+faiss-cpu==1.12.0
 filelock==3.18.0
 flatbuffers==25.2.10
 frozenlist==1.7.0
